[package]
name = "telebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.198", features = ["derive", "rc"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
